fully up to date

--- a/app/application/application.component.html
+++ b/app/application/application.component.html
@@ -2,6 +2,6 @@
 <menubar></menubar>
 <h1> Gabby and Agata's Food App!!!</h1>
 <div>
-  <city-selector></city-selector>
+  <county-selector></county-selector>
 </div>
 <footer></footer>
