modularised county folders

--- a/app/application/application.component.html
+++ b/app/application/application.component.html
@@ -1,24 +1,5 @@
-
 <LINK href="application.component.css" rel="stylesheet" type="text/css">
 <script type="text/javascript" src="js/application.component.style.js"></script>
-
 <menubar></menubar>
-
-<div id = "content">
-
-    <nav>
-
-      <ul>
-        <li><a routerLink="/dublin">Dublin</a></li>
-        <li><a routerLink="/meath">Meath</a></li>
-        <li><a routerLink="/kildare">Kildare</a></li>
-      </ul>
-    </nav>
-
-    <div id = "main">
-        <router-outlet></router-outlet>
-    </div>
-
-</div>
-
+<county-selector></county-selector>
 <footer></footer>
