--- a/app/county-selector/county-selector.component.html
+++ b/app/county-selector/county-selector.component.html
@@ -1,7 +1,18 @@
-<ul style="list-style-type:circle">
-  <li><a href="" >Dublin</a></li>
-  <li><a href="" >Meath</a></li>
-  <li><a href="" >Kildare</a></li>
-  <li><a href="" >Wexford</a></li>
-  <li><a href="" >Kerry</a></li>
-</ul>
+<LINK href="county-selector.component.css" rel="stylesheet" type="text/css">
+
+<div id = "content">
+
+    <nav>
+      <ul>
+        <li><a routerLink="/dublin">Dublin</a></li>
+        <li><a routerLink="/meath">Meath</a></li>
+        <li><a routerLink="/kildare">Kildare</a></li>
+      </ul>
+    </nav>
+
+    <div id = "content">
+        <div id = "main">
+            <router-outlet></router-outlet>
+        </div>
+    </div>
+</div>
