--- a/app/footer/footer.component.html
+++ b/app/footer/footer.component.html
@@ -1,2 +1,5 @@
 <!-- Define the HTML template for FooterComponent here -->
-<h1>This is the footer</h1> 
+
+<div class = "footer">
+<h1>This is the footer</h1>
+</div>
