--- a/app/county-selector/dublin/dublin.component.html
+++ b/app/county-selector/dublin/dublin.component.html
@@ -1,5 +1,7 @@
 <div class="container" style="overflow-y: scroll; height:400px;">
 	<div *ngFor="let p of products">
-		<osl-product-item [product]="p"></osl-product-item>
+		<div *ngIf="p.category == 'dublin'">
+			<osl-product-item [product]="p"></osl-product-item>
+	  </div>
 	</div>
 </div>
