--- a/app/county-selector/kildare/kildare.component.html
+++ b/app/county-selector/kildare/kildare.component.html
@@ -1,5 +1,8 @@
 <div class="container" style="overflow-y: scroll; height:400px;">
 	<div *ngFor="let p of products" >
-		<osl-product-item [product]="p"></osl-product-item>
+		<div *ngIf="p.category == 'kildare'">
+
+			<osl-product-item [product]="p"></osl-product-item>
+		</div>
 	</div>
 </div>
