--- a/app/county-selector/meath/meath.component.html
+++ b/app/county-selector/meath/meath.component.html
@@ -1,6 +1,8 @@
 
 <div class="container" style="overflow-y: scroll; height:400px;">
 	<div *ngFor="let p of products">
-		<osl-product-item [product]="p"></osl-product-item>
+		<div *ngIf="p.category == 'meath'">
+			<osl-product-item [product]="p"></osl-product-item>
+		</div>
 	</div>
 </div>
