--- a/app/county-selector/dublin/dublin.component.css
+++ b/app/county-selector/dublin/dublin.component.css
@@ -1,7 +1,6 @@
 .container {
   background-color: Bisque;
+  overflow-y: scroll;
   width: auto;
-
-
-
+  height:75vh; /*vh is heingt of window*/
 }
