--- a/app/county-selector/kildare/kildare.component.html
+++ b/app/county-selector/kildare/kildare.component.html
@@ -1,4 +1,4 @@
-<div class="container" style="overflow-y: scroll; height:400px;">
+<div class="container">
 	<div *ngFor="let p of products" >
 		<div *ngIf="p.category == 'kildare'">
 
