--- a/app/county-selector/meath/meath.component.html
+++ b/app/county-selector/meath/meath.component.html
@@ -1,5 +1,5 @@
 
-<div class="container" style="overflow-y: scroll; height:400px;">
+<div class="container">
 	<div *ngFor="let p of products">
 		<div *ngIf="p.category == 'meath'">
 			<osl-product-item [product]="p"></osl-product-item>
