--- a/app/footer/footer.component.css
+++ b/app/footer/footer.component.css
@@ -1,6 +1,8 @@
 .footer {
     left: 0;
     bottom: 0;
+    height: 10%;
+    position: absolute;
     width: 100%;
     background-color: gray;
     color: white;
