dropdown nav bitch

--- a/app/menubar/menubar.component.html
+++ b/app/menubar/menubar.component.html
@@ -1,5 +1,9 @@
 <!-- Define the HTML template for MenuBarComponent here -->
+<style>
+  .nav{overflow: hidden;}
+</style>
 
+<nav class = "menu">
 <nav class="navbar navbar-default">
   <div class="container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
@@ -52,4 +56,5 @@
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
+</nav>
 </nav>
