--- a/app/county-selector/county-selector.component.css
+++ b/app/county-selector/county-selector.component.css
@@ -6,42 +6,37 @@
 
 }
 
-
-nav {
-  float: left;
-  outline-style: solid;
-  position: fixed;
-  overflow:hidden;
-  white-space: nowrap;
-  height: 75vh;
-  width: 14%;
-}
-
-nav ul li {
-  font-size: 20px;
-  padding: 10px 0px;
-  text-align: center;
-  white-space: nowrap;
-}
-nav a{
-  display: inline-block;
-  width: auto;
-}
-ul {
-  margin: 0;
-  padding: 0;
-}
-
-li {
-  list-style-type: none;
+#content {
+  overflow-y:hidden;
+  overflow-x: hidden;
 }
 
 #main {
   float: right;
   position: relative;
-  border-bottom: 10%;
-  width: 85%;
+  width: 100%;
   height: 100%;
-  outline-style: solid;
 
+}
+
+/* make sidebar nav vertical */
+@media (min-width: 768px) {
+  .sidebar-nav .navbar .navbar-collapse {
+    padding: 0;
+    max-height: none;
+  }
+  .sidebar-nav .navbar ul {
+    float: none;
+  }
+  .sidebar-nav .navbar ul:not {
+    display: block;
+  }
+  .sidebar-nav .navbar li {
+    float: none;
+    display: block;
+  }
+  .sidebar-nav .navbar li a {
+    padding-top: 12px;
+    padding-bottom: 12px;
+  }
 }
