--- a/app/county-selector/county-selector.component.html
+++ b/app/county-selector/county-selector.component.html
@@ -20,7 +20,7 @@
         <div class="navbar-collapse collapse sidebar-navbar-collapse">
           <ul class="nav navbar-nav">
             <li class="dropdown">
-              <a routerLink="/dublin" class="dropdown-toggle" data-toggle="dropdown">Meath<b class="caret"></b></a>
+              <a routerLink="/dublin" class="dropdown-toggle" data-toggle="dropdown">Dublin<b class="caret"></b></a>
               <ul class="dropdown-menu">
                 <li><a href="#">Action</a></li>
                 <li><a href="#">Another action</a></li>
@@ -32,7 +32,7 @@
               </ul>
             </li>
             <li class="dropdown">
-              <a routerLink="/meath" class="dropdown-toggle" data-toggle="dropdown">Dublin<b class="caret"></b></a>
+              <a routerLink="/meath" class="dropdown-toggle" data-toggle="dropdown">Meath<b class="caret"></b></a>
               <ul class="dropdown-menu">
                 <li><a href="#">Action</a></li>
                 <li><a href="#">Another action</a></li>
