--- a/app/county-selector/meath/meath.component.html
+++ b/app/county-selector/meath/meath.component.html
@@ -1,8 +1,7 @@
-
 <div class="container">
-	<div *ngFor="let p of products">
-		<div *ngIf="p.category == 'meath'">
-			<osl-product-item [product]="p"></osl-product-item>
-		</div>
+	<div *ngFor="let r of restaurants">
+		<div *ngIf="r.county == 'Meath'">
+			<osl-restaurant-item [restaurant]="r"></osl-restaurant-item>
+	  </div>
 	</div>
 </div>
