--- a/app/county-selector/county-selector.component.html
+++ b/app/county-selector/county-selector.component.html
@@ -1,9 +1,6 @@
 <LINK href="county-selector.component.css" rel="stylesheet" type="text/css">
-
+<a routerLink=""></a>
 <div id = "content" >
-
-
-
     <div class="row">
   <div class="col-sm-2">
     <div class="sidebar-nav">
