score stars displaying

--- a/app/restaurant-item/restaurant-item.component.html
+++ b/app/restaurant-item/restaurant-item.component.html
@@ -7,5 +7,5 @@
 	<div>contact:  {{ restaurant.contact }}</div>
 	<div>City:  {{ restaurant.city }}</div>
 	<div>County:  {{ restaurant.county }}</div>
-	<div>Rating:  {{ restaurant.rating }}</div>
+	<div>Rating:  {{ restaurant.score }}<score [score] = "restaurant.score"></score></div>
 </div>
