renamed county-selector to resturaunt-selector, makes more sense

--- a/app/restaurant-selector/restaurant-selector.component.html
+++ b/app/restaurant-selector/restaurant-selector.component.html
@@ -1,5 +1,4 @@
-<LINK href="county-selector.component.css" rel="stylesheet" type="text/css">
-<a routerLink=""></a>
+<LINK href="restaurant-selector.component.css" rel="stylesheet" type="text/css">
 <div id = "content" >
     <div class="row">
   <div class="col-sm-2">
