--- a/app/restaurant-selector/dublin/dublin.component.css
+++ b/app/restaurant-selector/dublin/dublin.component.css
@@ -4,3 +4,19 @@
   width: auto;
   height:75vh; /*vh is heingt of window*/
 }
+
+.dropdown{
+  padding-bottom:10px;
+}
+
+.row-fluid {
+  display: flex;
+}
+
+.btn{
+  width: 100%;
+}
+
+.dropdown-menu{
+  width: 100%;
+}
