--- a/app/restaurant-selector/meath/meath.component.html
+++ b/app/restaurant-selector/meath/meath.component.html
@@ -1,3 +1,53 @@
+<div class = "row">
+	<div class = "col-md-3">
+		<div class="dropdown">
+		  <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">City
+		  <span class="caret"></span></button>
+		  <ul class="dropdown-menu">
+		    <li><a href="#">Blanchardstown</a></li>
+		    <li><a href="#">Howth</a></li>
+		    <li><a href="#">Lucan</a></li>
+		  </ul>
+		</div>
+	</div>
+
+	<div class = "col-md-3">
+		<div class="dropdown">
+		  <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">Food-Type
+		  <span class="caret"></span></button>
+		  <ul class="dropdown-menu">
+		    <li><a href="#">Seafood</a></li>
+		    <li><a href="#">Grill</a></li>
+		    <li><a href="#">Italian</a></li>
+				<li><a href="#">European</a></li>
+				<li><a href="#">Indian</a></li>
+		  </ul>
+		</div>
+	</div>
+
+	<div class = "col-md-3">
+		<div class="dropdown">
+		  <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">Price-Range
+		  <span class="caret"></span></button>
+		  <ul class="dropdown-menu">
+		    <li><a href="#">Cheap</a></li>
+		    <li><a href="#">Average</a></li>
+		    <li><a href="#">Expensive</a></li>
+		  </ul>
+		</div>
+	</div>
+
+	<div class = "col-md-3">
+		<div class="dropdown">
+		  <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">Rating
+		  <span class="caret"></span></button>
+		  <ul class="dropdown-menu">
+		    <li><a href="#">Low to High</a></li>
+		    <li><a href="#">High to Low</a></li>
+		  </ul>
+		</div>
+	</div>
+</div>
 <div class="container">
 	<div *ngFor="let r of restaurants">
 		<div *ngIf="r.county == 'Meath'">
