--- a/app/restaurant-selector/restaurant-selector.component.html
+++ b/app/restaurant-selector/restaurant-selector.component.html
@@ -15,42 +15,11 @@
         </div>
         <div class="navbar-collapse collapse sidebar-navbar-collapse">
           <ul class="nav navbar-nav">
-            <li class="dropdown">
-              <a routerLink="/dublin" class="dropdown-toggle" data-toggle="dropdown">Dublin<b class="caret"></b></a>
-              <ul class="dropdown-menu">
-                <li><a href="#">Action</a></li>
-                <li><a href="#">Another action</a></li>
-                <li><a href="#">Something else here</a></li>
-                <li class="divider"></li>
-                <li class="dropdown-header">Nav header</li>
-                <li><a href="#">Separated link</a></li>
-                <li><a href="#">One more separated link</a></li>
-              </ul>
-            </li>
-            <li class="dropdown">
-              <a routerLink="/meath" class="dropdown-toggle" data-toggle="dropdown">Meath<b class="caret"></b></a>
-              <ul class="dropdown-menu">
-                <li><a href="#">Action</a></li>
-                <li><a href="#">Another action</a></li>
-                <li><a href="#">Something else here</a></li>
-                <li class="divider"></li>
-                <li class="dropdown-header">Nav header</li>
-                <li><a href="#">Separated link</a></li>
-                <li><a href="#">One more separated link</a></li>
-              </ul>
-            </li>
-            <li class="dropdown">
-              <li><a routerLink="/kildare" class="dropdown-toggle" data-toggle="dropdown">Kildare<b class="caret"></b></a>
-              <ul class="dropdown-menu">
-                <li><a href="#">Action</a></li>
-                <li><a href="#">Another action</a></li>
-                <li><a href="#">Something else here</a></li>
-                <li class="divider"></li>
-                <li class="dropdown-header">Nav header</li>
-                <li><a href="#">Separated link</a></li>
-                <li><a href="#">One more separated link</a></li>
-              </ul>
-            </li>
+            <li><a href="#" style="font-weight:bold; font-size:18px;" >Choose Your County</a></li>
+            <li class="nav-divider"></li>
+            <li><a routerLink="/dublin" >Dublin</a></li>
+            <li><a routerLink="/meath">Meath</a></li>
+            <li><a routerLink="/kildare">Kildare</a>
             <li><a href="#">Menu Item 4</a></li>
             <li><a href="#">Reviews <span class="badge">1,118</span></a></li>
           </ul>
