how do we make it update?

--- a/app/restaurant-selector/dublin/dublin.component.html
+++ b/app/restaurant-selector/dublin/dublin.component.html
@@ -6,7 +6,7 @@
 		  <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">City
 		  <span class="caret"></span></button>
 		  <ul class="dropdown-menu">
-		    <li><a href="#">Blanchardstown</a></li>
+		    <li (click)="gaboobie('Blanchardstown');">Blanchardstown</li>
 		    <li><a href="#">Howth</a></li>
 		    <li><a href="#">Lucan</a></li>
 		  </ul>
@@ -32,7 +32,7 @@
 		  <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">Price-Range
 		  <span class="caret"></span></button>
 		  <ul class="dropdown-menu">
-		    <li><a href="#">Cheap</a></li>
+		    <li><a href="#" >Cheap</a></li>
 		    <li><a href="#">Average</a></li>
 		    <li><a href="#">Expensive</a></li>
 		  </ul>
@@ -51,9 +51,7 @@
 	</div>
 </div>
 <div class="container">
-	<div *ngFor="let r of restaurants">
-		<div *ngIf="r.county == 'Dublin'">
+	<div *ngFor="let r of tempRestaurants">
 			<osl-restaurant-item [restaurant]="r"></osl-restaurant-item>
 	  </div>
 	</div>
-</div>
