SHE KINDA WORKS

--- a/app/restaurant-selector/dublin/dublin.component.html
+++ b/app/restaurant-selector/dublin/dublin.component.html
@@ -6,8 +6,8 @@
 		  <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">City
 		  <span class="caret"></span></button>
 		  <ul class="dropdown-menu">
-		    <li (click)="gaboobie('Blanchardstown');">Blanchardstown</li>
-		    <li><a href="#">Howth</a></li>
+		    <li (click)="gaboobie('Blanchardstown');"><a routerLink="/dublin" >Blanchardstown</a></li>
+		    <li (click)="gaboobie('Howth');"><a routerLink="/dublin" >Howth</a></li>
 		    <li><a href="#">Lucan</a></li>
 		  </ul>
 		</div>
