--- a/app/restaurant-selector/restaurant-selector.component.html
+++ b/app/restaurant-selector/restaurant-selector.component.html
@@ -1,6 +1,6 @@
 <LINK href="restaurant-selector.component.css" rel="stylesheet" type="text/css">
 <div id = "content" >
-    <div class="row">
+  <div class="row">
   <div class="col-sm-2">
     <div class="sidebar-nav">
       <div class="navbar navbar-default" role="navigation">
@@ -29,8 +29,8 @@
   </div>
   <div class="col-sm-10">
 
-        <div id = "content" >
-            <div id = "main">
+        <div class = "content2" >
+            <div class = "main">
                 <router-outlet></router-outlet>
             </div>
         </div>
