--- a/app/footer/footer.component.css
+++ b/app/footer/footer.component.css
@@ -1,9 +1,17 @@
+
+.footer .text {
+
+  padding-bottom:8px;
+  overflow:hidden;
+}
+
 .footer {
+    margin-top: 20px;
+    position: absolute;
     overflow: hidden;
     left: 0;
     bottom: 0;
     height: 10%;
-    position: absolute;
     width: 100%;
     background-color: gray;
     color: white;
