--- a/app/footer/footer.component.html
+++ b/app/footer/footer.component.html
@@ -1,5 +1,7 @@
 <!-- Define the HTML template for FooterComponent here -->
 
 <div class = "footer">
-<h1>This is the footer</h1>
+  <div class = "text">
+    <h1>This is the footer</h1>
+  </div>
 </div>
