--- a/app/restaurant-selector/dublin/dublin.component.css
+++ b/app/restaurant-selector/dublin/dublin.component.css
@@ -2,7 +2,8 @@
   background-color: Bisque;
   overflow-y: scroll;
   width: auto;
-  height:75vh; /*vh is heingt of window*/
+  height:70vh; /*vh is heingt of window*/
+  border-radius: 10px;
 }
 
 .dropdown{
