--- a/app/restaurant-selector/restaurant-selector.component.css
+++ b/app/restaurant-selector/restaurant-selector.component.css
@@ -6,12 +6,14 @@
 
 }
 
-#content {
+.content {
+
   overflow-y:hidden;
   overflow-x: hidden;
+
 }
 
-#main {
+.main {
   float: right;
   position: relative;
   width: 100%;
