added filter functions, init and new css to each county

--- a/app/restaurant-selector/meath/meath.component.html
+++ b/app/restaurant-selector/meath/meath.component.html
@@ -4,9 +4,9 @@
 		  <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">City
 		  <span class="caret"></span></button>
 		  <ul class="dropdown-menu">
-		    <li><a href="#">Blanchardstown</a></li>
-		    <li><a href="#">Howth</a></li>
-		    <li><a href="#">Lucan</a></li>
+		    <li  (click)="filter('Trim');"><a routerLink="/meath" >Trim</a></li>
+		    <li><a href="#"></a></li>
+		    <li><a href="#"></a></li>
 		  </ul>
 		</div>
 	</div>
