--- a/app/restaurant-selector/dublin/dublin.component.html
+++ b/app/restaurant-selector/dublin/dublin.component.html
@@ -2,51 +2,49 @@
 
 <div class = "row">
 	<div class = "col-md-3">
-		<select (change)="filter($event.target.value)" class= "selectpicker">
-			 <option><a routerLink="/dublin" >Select City</a></option>
-		    <option><a routerLink="/dublin" >Blanchardstown</a></option>
-		    <option><a routerLink="/dublin" >Howth</a></option>
-		    <option><a routerLink="/dublin">Lucan</a></option>
+		<select (change)="filter($event.target.value, 1)" class= "selectpicker">
+			 <option>Select City</option>
+		    <option>Blanchardstown</option>
+		    <option>Howth</option>
+		    <option>Lucan</option>
+		</select>
+	</div>
 
+	<div class = "col-md-3">
+		<select (change)="filter($event.target.value, 2)" class= "selectpicker">
+			 <option>Select Food</option>
+		    <option>Seafood</option>
+		    <option>Grill</option>
+		    <option>Italian</option>
+		</select>
+	</div>
+
+
+	<div class = "col-md-3">
+		<select (change)="filter($event.target.value, 3)" class= "selectpicker">
+			 <option>Select Price</option>
+		    <option>Cheap</option>
+		    <option>Average</option>
+		    <option>Expensive</option>
 		</select>
 	</div>
 
 	<div class = "col-md-3">
 		<select (change)="filter($event.target.value)" class= "selectpicker">
-				<option><a routerLink="/dublin" >Select Foot Type</a></option>
-			  <option><a routerLink="/dublin" >Seafood</a></option>
-		    <option><a routerLink="/dublin" >Grill</a></option>
-		    <option><a routerLink="/dublin">Italian</a></option>
+			 <option>Select Rating</option>
+		    <option>Blanchardstown</option>
+		    <option>Howth</option>
+		    <option>Lucan</option>
 		</select>
-	</div>
-
-
-	<div class = "col-md-3">
-		<div class="dropdown">
-		  <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">Price-Range
-		  <span class="caret"></span></button>
-		  <ul class="dropdown-menu">
-		    <li><a (click)="filterPrice('Cheap');">Cheap</a></li>
-		    <li><a (click)="filterPrice('Average');">Average</a></li>
-		    <li><a (click)="filterPrice('Expensive');">Expensive</a></li>
-		  </ul>
-		</div>
-	</div>
-
-	<div class = "col-md-3">
-		<div class="dropdown">
-		  <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">Rating
-		  <span class="caret"></span></button>
-		  <ul class="dropdown-menu">
-		    <li><a href="#">Low to High</a></li>
-		    <li><a href="#">High to Low</a></li>
-		  </ul>
-		</div>
 	</div>
 </div>
-
+<div>City: {{cityFilter}} </div>
+<div>Food-Type: {{foodFilter}}</div>
+<div>Price: {{priceFilter}}</div>
 <button (click) = "displayArray();">Display array to console</button>
 <button (click) = "remove();">splice last element</button>
+<button (click) = "clear();">Clear all filters</button>
+
 
 <div class="container">
 
