--- a/app/restaurant-item/restaurant-item.component.css
+++ b/app/restaurant-item/restaurant-item.component.css
@@ -1,7 +1,23 @@
 .restaurantItem {
+    padding-top: 5px;
+    padding-bottom: 20px;
     margin-bottom: 10px;
+    margin-top:10px;
     width: auto;
-    background-color: #00B0FF;
-    color: white;
+    background-color: #ffffff;
     border-radius: 10px;
+    border-style: solid;
+}
+
+.imageArea img{
+  padding-top: 20px;
+  padding-bottom: 20px;
+  height: 250px;
+  width: 100%;
+}
+
+
+
+.detailsArea {
+  height:35vh;
 }
