i cant get the thing to display restaurant's details

--- a/app/restaurant-selector/dublin/dublin.component.html
+++ b/app/restaurant-selector/dublin/dublin.component.html
@@ -32,9 +32,8 @@
 	<div class = "col-md-3">
 		<select (change)="filter($event.target.value)" class= "selectpicker">
 			 <option>Select Rating</option>
-		    <option>Blanchardstown</option>
-		    <option>Howth</option>
-		    <option>Lucan</option>
+		    <option>Low to High</option>
+		    <option>High to Low</option>
 		</select>
 	</div>
 </div>
