--- a/app/restaurant-selector/kildare/kildare.component.css
+++ b/app/restaurant-selector/kildare/kildare.component.css
@@ -1,16 +1,19 @@
 .container {
-  background-color: HotPink;
+  background-color: Bisque;
   overflow-y: scroll;
+  overflow-x: hidden;
   width: auto;
-  height:70vh; /*vh is heingt of window*/
+  height:65vh; /*vh is heingt of window*/
   border-radius: 10px;
 }
+
 .dropdown{
   padding-bottom:10px;
 }
 
 .row-fluid {
   display: flex;
+
 }
 
 .btn{
