--- a/app/restaurant-item/restaurant-item.component.html
+++ b/app/restaurant-item/restaurant-item.component.html
@@ -9,12 +9,12 @@
 
 	    <div class="col-md*-9">
 				<div class = "detailsArea">
-					<h3>{{ restaurant.name }}</h3>
+					<h3 > <a [routerLink]="['/restaurant-details', restaurant.name]">{{ restaurant.name }}</a></h3>
 					<div>Category: {{ restaurant.category }}</div>
 					<div>Price:  {{ restaurant.price }}</div>
 					<div>Address: {{ restaurant.address }}</div>
 					<div>Opening Hours:  {{ restaurant.openingHours }}</div>
-					<div>contact:  {{ restaurant.contact }}</div>
+					<div>Contact:  {{ restaurant.contact }}</div>
 					<div>City:  {{ restaurant.city }}</div>
 					<div>County:  {{ restaurant.county }}</div>
 					<div>Rating:  {{ restaurant.score }}<score [score] = "restaurant.score"></score></div>
