passes id of restaurant to details page, displays corrosponding obj

--- a/app/restaurant-item/restaurant-item.component.html
+++ b/app/restaurant-item/restaurant-item.component.html
@@ -9,7 +9,7 @@
 
 	    <div class="col-md*-9">
 				<div class = "detailsArea">
-					<h3 > <a [routerLink]="['/restaurant-details', restaurant.name]">{{ restaurant.name }}</a></h3>
+					<h3 > <a [routerLink]="['/restaurant-details', restaurant.id]">{{ restaurant.name }}</a></h3>
 					<div>Category: {{ restaurant.category }}</div>
 					<div>Price:  {{ restaurant.price }}</div>
 					<div>Address: {{ restaurant.address }}</div>
