--- a/app/footer/footer.component.css
+++ b/app/footer/footer.component.css
@@ -7,7 +7,7 @@
 
 .footer {
     margin-top: 20px;
-    position: absolute;
+    position: relative;
     overflow: hidden;
     left: 0;
     bottom: 0;
