--- a/app/home/home.component.html
+++ b/app/home/home.component.html
@@ -4,8 +4,8 @@
 <div class="container">
   <h1>Choose County</h1>
   <ul class="list-group">
-  <a routerLink="/dublin"><li class="list-group-item">Dublin <span class="badge"></span></li></a>
-  <a routerLink="/meath"><li class="list-group-item">Meath <span class="badge"></span></li></a>
-  <a routerLink="/kildare"><li class="list-group-item">Kildare <span class="badge"></span></li></a>
+  <a routerLink="/dublin"><li class="list-group-item">Dublin <span class="badge">12</span></li></a>
+  <a routerLink="/meath"><li class="list-group-item">Meath <span class="badge">5</span></li></a>
+  <a routerLink="/kildare"><li class="list-group-item">Kildare <span class="badge">3</span></li></a>
 </ul>
 </div>
