--- a/app/restaurant-details/restaurant-details.component.html
+++ b/app/restaurant-details/restaurant-details.component.html
@@ -1,14 +1,8 @@
 <div class="container">
   <div *ngFor="let r of restaurants">
-    <div *ngIf="r.id == this.id">
+    <div *ngIf="r.name == 'this.name'">
       <osl-restaurant-item [restaurant]="r"></osl-restaurant-item>
     </div>
   </div>
 
-  <div class = "review">
-    <div class="col-lg-6">
-      <h1> Reviews</h1>
-    </div>
-
-  </div>
 </div>
