--- a/app/restaurant-details/restaurant-details.component.css
+++ b/app/restaurant-details/restaurant-details.component.css
@@ -1,9 +1,9 @@
-.container {
-  width:1000px;
-}
 
 .review{
-  height: 400px;
+
+  overflow-y: auto;
+  overflow-x: hidden;
+  height: 100vh;
   width: 100%;
   border-style: solid;
   border-radius: 10px;
@@ -11,5 +11,9 @@
 
 .rating {
   height:400px;
+  width:100%;
+}
+
+.user-reviews{
   width:100%;
 }
