--- a/app/restaurant-details/restaurant-details.component.html
+++ b/app/restaurant-details/restaurant-details.component.html
@@ -1,14 +1,29 @@
 <div class="container">
-  <div *ngFor="let r of restaurants">
-    <div *ngIf = "r.id == this.id">
-      <osl-restaurant-item [restaurant]="r"></osl-restaurant-item>
-    </div>
-  </div>
+  <div class = "col-lg-10">
+    <div *ngFor="let r of restaurants">
+      <div *ngIf = "r.id == this.id">
+        <osl-restaurant-item [restaurant]="r"></osl-restaurant-item>
 
-  <div class = "review">
-    <div class = "col-lg-6">
-        <h1>Reviews</h1>
+      </div>
     </div>
-  </div>
 
+    <div class = "review">
+      <div class = "col-lg-6">
+          <div class = "user-reviews">
+            <h1 >Customer Reviews</h1>
+            <div *ngFor="let p of tempReviews">
+              <div *ngIf = "p.id == this.id">
+                <osl-review-item [review]="p"></osl-review-item>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class = "col-lg-6">
+            <div class = "user-reviews">
+              <h1 >Review</h1>
+              <input type= "#text" placeholder="Input string..." #input>
+              <button (click)= "write()">Submit</button>
+            </div>
+          </div>
+    </div>
 </div>
