--- a/app/footer/footer.component.css
+++ b/app/footer/footer.component.css
@@ -6,12 +6,13 @@
 }
 
 .footer {
-    margin-top: 20px;
-    position: relative;
-    overflow: hidden;
     left: 0;
     bottom: 0;
-    height: 10%;
+    margin-top: 10px;
+    position: sticky;
+    overflow: hidden;
+
+    height: 80px;
     width: 100%;
     background-color: gray;
     color: white;
