--- a/app/home/home.component.css
+++ b/app/home/home.component.css
@@ -1,8 +1,13 @@
 .container {
-  background-color: Bisque;
+  background-color: #9999ff;
   overflow-y: scroll;
   overflow-x: hidden;
   width: auto;
-  height:65vh; /*vh is heingt of window*/
+  height:73vh; /*vh is heingt of window*/
   border-radius: 10px;
+  border: 2px solid #6600cc;
+}
+
+h1 {
+  color:white;
 }
