--- a/app/restaurant-selector/dublin/dublin.component.css
+++ b/app/restaurant-selector/dublin/dublin.component.css
@@ -1,10 +1,11 @@
 .container {
-  background-color: Bisque;
+  background-color: #9999ff;
   overflow-y: scroll;
   overflow-x: hidden;
   width: auto;
   height:65vh; /*vh is heingt of window*/
   border-radius: 10px;
+  border: 2px solid #6600cc;
 }
 
 .dropdown{
@@ -32,3 +33,14 @@ ul li {
   font-size:18px;
 
 }
+ select {
+   width:100%;
+   height:40px;
+   border-radius: 10px;
+   margin-bottom: 10px;
+ }
+
+ h1{
+   color:white;
+   text-align: center;
+ }
