--- a/app/restaurant-selector/restaurant-selector.component.html
+++ b/app/restaurant-selector/restaurant-selector.component.html
@@ -15,13 +15,10 @@
         </div>
         <div class="navbar-collapse collapse sidebar-navbar-collapse">
           <ul class="nav navbar-nav">
-            <li><a routerLink="/home" style="font-weight:bold; font-size:18px;" >Choose Your County</a></li>
+            <li><a routerLink="/home" style="font-weight:bold; font-size:18px;" >Click Here To Get Started!</a></li>
             <li class="nav-divider"></li>
-            <li><a routerLink="/dublin" >Dublin</a></li>
-            <li><a routerLink="/meath">Meath</a></li>
-            <li><a routerLink="/kildare">Kildare</a>
-            <li><a href="#">Menu Item 4</a></li>
-            <li><a href="#">Reviews <span class="badge">1,118</span></a></li>
+            <li><a routerLink = "/home">County</a></li>
+            <li><a routerLink="/all-reviews">Reviews<span class="badge">12</span></a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
