Cleaned up bars, made other counties work and look same, Added extra components (top rated, quisine), Added Extra tabs on home component to access these, added working search feature

--- a/app/home/home.component.html
+++ b/app/home/home.component.html
@@ -1,6 +1,10 @@
 
 
-
+<ul class="nav nav-tabs">
+  <li class="active"><a routerLink = "/home" >Counties</a></li>
+  <li><a routerLink = "/top-rated">Top Rated</a></li>
+  <li><a routerLink = "/quisine">Restaurants By Quisine</a></li>
+</ul>
 <div class="container">
   <h1>Choose County</h1>
   <ul class="list-group">
