--- a/app/restaurant-selector/restaurant-selector.component.html
+++ b/app/restaurant-selector/restaurant-selector.component.html
@@ -18,6 +18,8 @@
             <li><a routerLink="/home" style="font-weight:bold; font-size:18px;" >Click Here To Get Started!</a></li>
             <li class="nav-divider"></li>
             <li><a routerLink = "/home">County</a></li>
+            <li><a routerLink = "/top-rated">Top Rated</a></li>
+            <li><a routerLink = "/quisine">Restaurants by Quisine</a></li>
             <li><a routerLink="/all-reviews">Reviews<span class="badge">12</span></a></li>
           </ul>
         </div><!--/.nav-collapse -->
