--- a/app/restaurant-selector/kildare/kildare.component.html
+++ b/app/restaurant-selector/kildare/kildare.component.html
@@ -37,18 +37,12 @@
 		</select>
 	</div>
 </div>
-<div>City: {{cityFilter}} </div>
-<div>Food-Type: {{foodFilter}}</div>
-<div>Price: {{priceFilter}}</div>
-<button (click) = "displayArray();">Display array to console</button>
-<button (click) = "remove();">splice last element</button>
-<button (click) = "clear();">Clear all filters</button>
 
 
 <div class="container">
 
-		<div *ngFor="let r of filteredRestaurants">
-			<div *ngIf="r.county == 'Dublin'">
+		<div *ngFor="let r of tempRestaurants">
+			<div *ngIf="r.county == 'Kildare'">
 				<osl-restaurant-item [restaurant]="r"></osl-restaurant-item>
 			</div>
 	  </div>
