--- a/app/restaurant-selector/meath/meath.component.html
+++ b/app/restaurant-selector/meath/meath.component.html
@@ -1,49 +1,47 @@
 
 
 <div class = "row">
-	<div class = "col-md-3">
-		<select (change)="filter($event.target.value)" class= "selectpicker">
-			 <option selected="selected"><a routerLink="/meath" >Select City</a></option>
-
-
+	<div class = "col-md-4">
+		<select (change)="filter($event.target.value, 1)" class= "selectpicker">
+			 <option>City</option>
+				<option>Trim</option>
+				<option>Enfield</option>
+				<option>Navan</option>
 		</select>
 	</div>
 
-	<div class = "col-md-3">
-		<select (change)="filter($event.target.value)" class= "selectpicker">
-				<option selected="selected"><a routerLink="/meath" >Select Food</a></option>
-
+	<div class = "col-md-4">
+		<select (change)="filter($event.target.value, 2)" class= "selectpicker">
+			 <option>Food Type</option>
+				<option>Indian</option>
+				<option>Chinese</option>
+				<option>Italian</option>
+				<option>European</option>
 		</select>
 	</div>
 
 
-	<div class = "col-md-3">
+	<div class = "col-md-4">
 		<select (change)="filter($event.target.value, 3)" class= "selectpicker">
-			 <option>Select Price</option>
-		    <option>Cheap</option>
-		    <option>Average</option>
-		    <option>Expensive</option>
+			 <option>Price Range</option>
+				<option>Cheap</option>
+				<option>Average</option>
+				<option>Expensive</option>
 		</select>
 	</div>
 
-	<div class = "col-md-3">
-		<select (change)="filter($event.target.value)" class= "selectpicker">
-			 <option>Select Rating</option>
-		    <option>Low to High</option>
-		    <option>High to Low</option>
-		</select>
 	</div>
-
-	<div>City: {{cityFilter}} </div>
-	<div>Food-Type: {{foodFilter}}</div>
-	<div>Price: {{priceFilter}}</div>
-	<button (click) = "displayArray();">Display array to console</button>
-	<button (click) = "remove();">splice last element</button>
-	<button (click) = "clear();">Clear all filters</button>
 
 <div class="container">
 
-	<div *ngFor="let r of tempRestaurants">
-			<osl-restaurant-item [restaurant]="r"></osl-restaurant-item>
-	  </div>
+
+		<div *ngIf="tempRestaurants.length ==0">
+			<h1>Please Choose An Option!</h1>
+		</div>
+			<div *ngFor="let r of tempRestaurants">
+
+				<div *ngIf="r.county == 'Meath'">
+					<osl-restaurant-item [restaurant]="r"></osl-restaurant-item>
+				</div>
+		  </div>
 	</div>
