--- a/app/quisine/quisine.component.html
+++ b/app/quisine/quisine.component.html
@@ -10,6 +10,11 @@
         <option>Seafood</option>
         <option>Grill</option>
         <option>Italian</option>
+        <option>Chinese</option>
+        <option>Cafe</option>
+        <option>Casual Dining</option>
+        <option>European</option>
+        <option>A La Carte</option>
     </select>
   </div>
 
