--- a/app/restaurant-selector/kildare/kildare.component.html
+++ b/app/restaurant-selector/kildare/kildare.component.html
@@ -4,9 +4,9 @@
 	<div class = "col-md-3">
 		<select (change)="filter($event.target.value, 1)" class= "selectpicker">
 			 <option>Select City</option>
-		    <option>Blanchardstown</option>
-		    <option>Howth</option>
-		    <option>Lucan</option>
+		    <option>Maynooth</option>
+		    <option>Celbridge</option>
+		    <option>Kilcock</option>
 		</select>
 	</div>
 
@@ -14,8 +14,9 @@
 		<select (change)="filter($event.target.value, 2)" class= "selectpicker">
 			 <option>Select Food</option>
 		    <option>Seafood</option>
-		    <option>Grill</option>
-		    <option>Italian</option>
+		    <option>European</option>
+		    <option>Indian</option>
+				<option>Casual Dining</option>
 		</select>
 	</div>
 
@@ -29,13 +30,7 @@
 		</select>
 	</div>
 
-	<div class = "col-md-3">
-		<select (change)="filter($event.target.value)" class= "selectpicker">
-			 <option>Select Rating</option>
-		    <option>Low to High</option>
-		    <option>High to Low</option>
-		</select>
-	</div>
+
 </div>
 
 
