--- a/app/footer/footer.component.html
+++ b/app/footer/footer.component.html
@@ -2,6 +2,6 @@
 
 <div class = "footer">
   <div class = "text">
-    <h1>This is the footer</h1>
+    <h1>Gabby Farrell Agata Dzierzak</h1>
   </div>
 </div>
