--- a/app/restaurant-details/restaurant-details.component.css
+++ b/app/restaurant-details/restaurant-details.component.css
@@ -35,3 +35,9 @@
   margin-top: 10px;
   margin-bottom: 10px;
 }
+
+.imageArea img{
+  padding-top: 20px;
+  padding-bottom: 20px;
+  width: 100%;
+}
