--- a/app/restaurant-details/restaurant-details.component.html
+++ b/app/restaurant-details/restaurant-details.component.html
@@ -3,7 +3,7 @@
     <div *ngFor="let r of restaurants">
       <div *ngIf = "r.id == this.id">
 
-        <a routerLink = "/dublin"><h2><< Back to Restaurants..</h2></a>
+        <a routerLink = "/home"><h2><< Back to Restaurants..</h2></a>
         <osl-restaurant-item [restaurant]="r"></osl-restaurant-item>
       </div>
     </div>
@@ -11,6 +11,9 @@
     <div class = "menu">
       <div class = "col-lg-10">
         <h1>Menu</h1>
+          <div class = "imageArea">
+					 <img [src] = 'imgUrl' alt='{{restaurant.id}}'>
+         </div>
       </div>
     </div>
 
