--- a/app/restaurant-selector/meath/meath.component.html
+++ b/app/restaurant-selector/meath/meath.component.html
@@ -16,6 +16,7 @@
 				<option>Indian</option>
 				<option>Chinese</option>
 				<option>Italian</option>
+				<option>Cafe</option>
 				<option>European</option>
 		</select>
 	</div>
