--- a/app/search/search.component.html
+++ b/app/search/search.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <h1>Search Results</h1>
   <div *ngFor="let r of restaurants">
-    <div *ngIf="r.name == this.name">
+    <div *ngIf="r.name.toUpperCase() == this.name.toUpperCase()">
       <osl-restaurant-item [restaurant]="r"></osl-restaurant-item>
     </div>
 
