--- a/app/restaurant-details/restaurant-details.component.html
+++ b/app/restaurant-details/restaurant-details.component.html
@@ -12,7 +12,7 @@
       <div class = "col-lg-10">
         <h1>Menu</h1>
           <div class = "imageArea">
-					 <img [src] = 'imgUrl' alt='{{restaurant.id}}'>
+					 <img [src] = 'imgUrl' >
          </div>
       </div>
     </div>
